--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 						                    <div class="col-xs-12">
 						                        <div class="header-text text-center">
 						                        	<img src="images/dp.jpg" alt="" class="img-circle">
-			                                        <h2>Gladys P. Davidson</h2>
-			                                        <p>I'm Product Designer</p>
+			                                        <h2>Djoko Prasetyo</h2>
+			                                        <p>I'm Website Freelancer</p>
 			                                        <div class="social-links header-links">
 			                                            <ul>
 			                                                <li><a href=""><i class="fa fa-facebook facebook"></i></a></li>
