--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="" />
 		
 		<!-- Title -->
-		<title>Ultra - Responsive Material Design Personal Template</title>
+		<title>Curriculum Vitae Project</title>
 		
 		<!--google font-->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
