--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			  			<div class="col-xs-3">
 			  				 <!-- START LOGO -->
                             <div class="logo">
-                                <a href="index.html">Ultra</a>
+                                <a href="index.html">Lorem Ipsum</a>
                             </div>
                         	<!-- END LOGO -->
 			  			</div>
@@ -141,18 +141,18 @@
 			                            	<div class="col-md-6 col-md-offset-1">
 			                                    <div class="introduce">
 						                            <h2 class="title">Personal Details</h2>
-						                            <p>Hye, I’m Johnathan Doe residing in this beautiful world. I create websites and mobile apps with great UX and UI design. I have done work with big companies like Nokia, Google and Yahoo. Meet me or Contact me for any queries. One Extra line for filling space. Fill as many you want.Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+						                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 						                        </div>   
 						                    </div>
 			                             	<div class="col-md-5 col-xs-12">
 			                            		<div class="presonal-inform">
 					                                <ul class="list-unstyled">
-					                                    <li class="clearfix"><i class="pe-7s-user"></i><b>Name:</b> Jone Deo</li>
+					                                    <li class="clearfix"><i class="pe-7s-user"></i><b>Name:</b> Lorem Ipsum</li>
 					                                    <li class="clearfix"><i class="pe-7s-phone"></i><b>Phone:</b> (123)_456_7890</li>
-					                                    <li class="clearfix"><i class="pe-7s-mail"></i><b>Email:</b> Jondeo@email.com</li>
-					                                    <li class="clearfix"><i class="pe-7s-gift"></i><b>Date of Birth:</b> 6 January 1987</li>
-					                                    <li class="clearfix"><i class="pe-7s-map-marker"></i><b>Address:</b> Inox Box 1546, Sollins.</li>
-					                                    <li class="clearfix"><i class="pe-7s-note2"></i><b>Languages:</b> English, Australian</li>
+					                                    <li class="clearfix"><i class="pe-7s-mail"></i><b>Email:</b> loremipsum@email.com</li>
+					                                    <li class="clearfix"><i class="pe-7s-gift"></i><b>Date of Birth:</b> Lorem Ipsum</li>
+					                                    <li class="clearfix"><i class="pe-7s-map-marker"></i><b>Address:</b> Lorem Ipsum.</li>
+					                                    <li class="clearfix"><i class="pe-7s-note2"></i><b>Languages:</b> Indonesia, English</li>
 					                                </ul>
 					                            </div>  		
 			                            	</div>  
