--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						                    <div class="col-xs-12">
 						                        <div class="header-text text-center">
 						                        	<img src="images/dp.jpg" alt="" class="img-circle">
-			                                        <h2>Djoko Prasetyo</h2>
+			                                        <h2>Lorem Ipsum</h2>
 			                                        <p>I'm Website Freelancer</p>
 			                                        <div class="social-links header-links">
 			                                            <ul>
