--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 							                                <div class="rex-item">
 							                                    <h3>2000-2001</h3>
 							                                    <h4>University of Design</h4>
-							                                    <p>Believe it or not its just me. Texas tea. Come and knock on our door. We've been waiting for you where are herhers and his. Three's company too.</p>
+							                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							                                </div>
 							                            </div>
 							                        </div>
@@ -266,7 +266,7 @@
 							                                <div class="rex-item">
 							                                    <h3>2001-2004</h3>
 							                                    <h4>University of Design</h4>
-							                                    <p>Believe it or not its just me. Texas tea. Come and knock on our door. We've been waiting for you where are herhers and his. Three's company too.</p>
+							                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							                                </div>
 							                            </div>
 							                        </div>
@@ -282,7 +282,7 @@
 							                                <div class="rex-item">
 							                                    <h3>2004-2006</h3>
 							                                    <h4>University of Design</h4>
-							                                    <p>Believe it or not its just me. Texas tea. Come and knock on our door. We've been waiting for you where are herhers and his. Three's company too.</p>
+							                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							                                </div>
 							                            </div>
 							                        </div>
@@ -327,7 +327,7 @@
 							                                <div class="rex-item">
 							                                    <h3>2012-2015</h3>
 							                                    <h4>Senior Graphic Designer</h4>
-							                                    <p>Believe it or not its just me. Texas tea. Come and knock on our door. We've been waiting for you where are herhers and his. Three's company too.</p>
+							                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							                                </div>
 							                            </div>
 							                        </div>
@@ -343,7 +343,7 @@
 							                                <div class="rex-item">
 							                                    <h3>2010-2012</h3>
 							                                    <h4>Web developer</h4>
-							                                    <p>Believe it or not its just me. Texas tea. Come and knock on our door. We've been waiting for you where are herhers and his. Three's company too.</p>
+							                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							                                </div>
 							                            </div>
 							                        </div>
@@ -359,7 +359,7 @@
 							                                <div class="rex-item">
 							                                    <h3>2007-2010</h3>
 							                                    <h4>Freelancer</h4>
-							                                    <p>Believe it or not its just me. Texas tea. Come and knock on our door. We've been waiting for you where are herhers and his. Three's company too.</p>
+							                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 							                                </div>
 							                            </div>
 							                        </div>
